--- a/app/globals.css
+++ b/app/globals.css
@@ -113,3 +113,11 @@ a {
 		color-scheme: dark;
 	}
 }
+
+@font-face {
+	font-family: "CustomLogoFont";
+	src: url("/Audiowide.ttf") format("truetype");
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
+}
